--- a/style/_mediasQ.scss
+++ b/style/_mediasQ.scss
@@ -1,19 +1,27 @@
     @media screen and (min-width:321px) {
 
-        section.title .punto_color{
-                color: #0000EC;
+        section.title h1 span.punto_color{
+            color: #0000EC;
+                
         }
         section.title p span::after{
                 content: " y la tecnología.";   
-            }
+        }
         section.title p span::before{
                  display: none;
-             }
-        section.title h1 span{
+        }
+        section.title h1 span:first-child{
                 padding: unset;
         }
+        
+        section.entrevistas article div:nth-child(1n){
+            justify-content: flex-end;
+        }
+        section.entrevistas article div:nth-child(2n){
+            justify-content: flex-start;
+        }
         section.entrevistas article div img{
-                width: 80%;
+                max-width: 350px;
                 padding-bottom: 10px;
         }
     }
@@ -28,6 +36,11 @@
                 margin-left: 50px;
                 max-width: 640px;
             }
+            
+            .nosotros article div.phone_over{
+                
+                width: 65%;
+            }
             .entrevistas  article{
                 display: grid;
                 grid-template-areas:"h2 h2 "
@@ -40,19 +53,20 @@
             .entrevistas article h2{
                 grid-area: h2;
             }
-            section.entrevistas article div{
+            section.entrevistas article div{           
                 width:100% ;
-                
+    
             }
-            section.entrevistas article div img{
-                width: 90%;
-                padding-bottom: 10px;
+            .entrevistas article div img.width_responsive{
+                max-width: 350px;
+            }
+            .entrevistas article div:nth-child(1n){
+                padding: 0 10% 10px 0;
+            }
+            .entrevistas article div:nth-child(2n){
+                padding: 0 0 10px 10%;
             }
 
-            section.topicos article.novedades div.oblicuo div a{
-
-                margin: 64px 16px 64px 16px;
-            } 
 
         }
 
@@ -170,19 +184,27 @@
                 grid-template-areas:"Pod_title Pod_title"
                                     "Pod1 Pod2" 
                                     "Pod3 Pod4";
+                grid-template-columns: 50% 50%;
+                grid-template-rows: auto;
                 
             }
             .episodios article .pc{
                 display: unset;
                 max-width: 584px;
                 min-height: 232px;
+                
             }
+            .episodios article .pc iframe{
+                width: 80%;   
+            }
+
             section.episodios.oblicuo article h2.Pod_title{
                 margin: 186px 0 26px 200px;
                 font-size: 48px;
                 
                 
             }
+            
             
             .Pod_title{
                 grid-area: Pod_title;
@@ -197,20 +219,20 @@
             }
             .pc.Pod1{
                 grid-area: Pod1;
-                margin:26px 72px 72px 100px;
+                margin: 26px 0 72px 100px;
                 
             }
             .pc.Pod2{
                 grid-area: Pod2;
-                margin:26px 100px 0 0;
+                margin:26px 0 72px 72px;
             }
             .pc.Pod3{
                 grid-area: Pod3;
-                margin:0 72px 84px 100px;
+                margin:0 72px 164px 100px;
             }
             .pc.Pod4{
                 grid-area: Pod4;
-                margin:0 100px 84px 0;
+                margin:0 0 164px 72px;
             }
 
             /* *********************************************        Seccion nosotros   ****************************************************** */
@@ -220,7 +242,7 @@
 
             .nosotros article div.phone_over{
                     overflow:unset;
-                    width: 100%;
+                    width: 50%;
             }
             .nosotros article{
                 display: flex;
@@ -228,19 +250,16 @@
                 
             }
 
-            .nosotros article .phone_over img{
-                    
+            .nosotros article div.phone_over img{
+                position: unset;
                 min-width: 457.6px;
                 height: 660px;
                 margin: 0 62.4px 64px 200px; 
             }
 
             .nosotros article div{
-                width: 100%;
+                width: 50%;
                 height: 100%;
-
-                
-               
             }
             .nosotros article div h2{
                 width: 399px;
@@ -283,14 +302,19 @@
                 grid-template-columns:auto;
                 grid-template-rows: 162px 364px 364px;
             }
-            .entrevistas article div {
+            .entrevistas article div:nth-child(1n) {
                 width: 100%;
+                padding: unset;
             }
-            .entrevistas article div img{
+            section.entrevistas article div img.width_responsive{
+                padding-bottom: unset;
+                max-width: unset;
                 grid-area: div;
                 width: 100%;
                 min-height:364px;
+                
             }
+            
 
             /* *********************************************        Seccion topicos   ****************************************************** */
             section.topicos article:first-child div{
@@ -299,26 +323,26 @@
                 grid-template-areas: "img1 img2 img3 img4"
                                      "P_1 P_2 P_3 P_4";
 
+                grid-template-columns: repeat(4,18.3%);
+                grid-template-rows:repeat(2,50%);
                 flex-flow: column nowrap;
             }
             .topicos article div img{
-                margin: 0 156px 29px 0;
+
+                margin: 2.3% 25.4%;
+
             }
             .topicos article div p{
-                margin: 0 40px 66px 0;
-                width: 220px;
                 height: 32px;
             }
             
             .topicos article div .img1{
                 grid-area:img1;
-                margin-left: 278px;
             }
             .topicos article div .P_1{
                 
                 grid-area: P_1;
-                height: 64px;
-                margin-left: 220px;
+                margin-left: 1.38%;
             }
             .topicos article div .img2{
                 grid-area:img2;
@@ -336,18 +360,18 @@
             }
             .topicos article div .img4{
                 grid-area:img4;
-                margin-right:  278px;
+                margin-right:  19.3%;
             }
             .topicos article div .P_4{
                 grid-area:P_4;
                 height: 64px;
-                margin-right:  220px;
+                margin-right:  1.38%;
                 margin-bottom: 34px;
             }
             .topicos article h2{
                 width: 100%;
-                height: 62px;
-                margin: 64px 0 69px 200px;
+                height: 14.5%;
+                margin-left: 13.9%;
                 font-size: 48px;
                 color: #060A24;
                 letter-spacing: 0;
@@ -358,25 +382,32 @@
             
             }
             section article.novedades div.oblicuo h2{
-                transform-origin: top right;
+                transform-origin: 118% 100%;
                 font-size: 48px;
                 color: #FFFFFF;
                 letter-spacing: 0;
                 text-align: center;
                 width: 702px;
                 height: 62px;
-                margin: 213px 374px 36px 374px;
+                margin: 200px 0 2% 16% ;
             
             }
             section article.novedades div.oblicuo div{
-                width: 345px;
+                transform-origin: 100% 100%;
+                transform: skewY(6deg);
+                margin: 0 0 0 36%;
+                width:  30%;
                 height: 56px;
-                margin: 0 548px 151px 547px;
                 font-size: 18px;
                 color: #060A24;
                 letter-spacing: 0;
                 text-align: center;
                 line-height: 24px;
+            }
+            section article.novedades div.oblicuo div.btn a{
+                transform: skewY(0);
+                margin: unset ;
+                
             }
 
         }
