--- a/style/style.css
+++ b/style/style.css
@@ -838,7 +838,7 @@ footer ul {
   margin-bottom: 31px;
   list-style: none;
   width: 100%;
-  height: 28px;
+  height: 40px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -850,8 +850,15 @@ footer ul {
       justify-content: space-around;
 }
 
-footer ul a {
+footer ul li a {
   color: black;
+}
+
+footer ul li:hover {
+  -webkit-transform: scale(2.5, 2.5);
+          transform: scale(2.5, 2.5);
+  color: aliceblue;
+  border-radius: 5px;
 }
 
 @media screen and (min-width: 321px) {
@@ -996,7 +1003,18 @@ footer ul a {
     /* *********************************************        Seccion Episodios   ****************************************************** */
     /* *********************************************        Seccion nosotros   ****************************************************** */
     /* *********************************************        Seccion entrevistas     ******************************************** */
-    /* *********************************************        Seccion topicos   ****************************************************** */
+    /*
+            section.entrevistas article div img.width_responsive{
+                padding-bottom: unset;
+                max-width: unset;
+                grid-area: div;
+                width: 100%;
+                min-height:364px;
+                
+            }
+            
+
+            /* *********************************************        Seccion topicos   ****************************************************** */
     /* *********************************************     Seccion topicos ==> Novedades   ******************************************* */
   }
   main section.title h1 {
@@ -1098,7 +1116,7 @@ footer ul a {
     position: unset;
     min-width: 457.6px;
     height: 660px;
-    margin: 0 62.4px 64px 200px;
+    margin: 0 62.4px 64px 13.9%;
   }
   main .nosotros article div {
     width: 50%;
@@ -1151,7 +1169,7 @@ footer ul a {
     width: 100%;
     padding: unset;
   }
-  main section.entrevistas article div img.width_responsive {
+  main section.entrevistas article div img {
     padding-bottom: unset;
     max-width: unset;
     -ms-grid-row: 2;
