--- a/style/style.css
+++ b/style/style.css
@@ -12,13 +12,8 @@
   display: -ms-grid;
   display: grid;
       grid-template-areas: "_header" "_main" "_footer";
-<<<<<<< HEAD
   -ms-grid-columns: 100%;
       grid-template-columns: 100%;
-=======
-  -ms-grid-columns: auto;
-      grid-template-columns: auto;
->>>>>>> 8d4848dbd8b20d4c0606a950053b6fce6aa461e7
   grid-auto-rows: auto;
   background-color: #FFFFFF;
 }
@@ -57,14 +52,11 @@ header {
           justify-content: space-between;
   /* amburgesa*/
   /*animación del menu que se desplega*/
-<<<<<<< HEAD
   /*
     nav .menu {
         padding-top: 3px;
     }
     */
-=======
->>>>>>> 8d4848dbd8b20d4c0606a950053b6fce6aa461e7
   /*checkbox transparente y en primer plano*/
   /*span -lineas del menu hamburguesa-*/
   /*movimiento a cruz*/
@@ -124,13 +116,6 @@ header nav .menu input[type="checkbox"]:checked ~ ul {
   transition: height 0.5s ease-in-out;
 }
 
-<<<<<<< HEAD
-=======
-header nav .menu {
-  padding-top: 3px;
-}
-
->>>>>>> 8d4848dbd8b20d4c0606a950053b6fce6aa461e7
 header nav .menu input {
   display: block;
   width: 40px;
@@ -490,11 +475,7 @@ main .title h1 {
   margin: 29px 0 0 16px;
 }
 
-<<<<<<< HEAD
 main .title h1 span:first-child {
-=======
-main .title h1 span {
->>>>>>> 8d4848dbd8b20d4c0606a950053b6fce6aa461e7
   text-decoration: line-through;
   padding-right: 42px;
 }
@@ -636,7 +617,6 @@ main .nosotros {
 }
 
 main .nosotros article {
-<<<<<<< HEAD
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -652,16 +632,6 @@ main .nosotros article {
 
 main .nosotros article div.phone_over {
   width: 100%;
-=======
-  position: relative;
-  top: 0;
-  left: 0;
-  width: 100%;
-}
-
-main .nosotros article div.phone_over {
-  width: 320px;
->>>>>>> 8d4848dbd8b20d4c0606a950053b6fce6aa461e7
   overflow: hidden;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -732,11 +702,7 @@ main .entrevistas div {
 }
 
 main .entrevistas div img {
-<<<<<<< HEAD
   width: 100%;
-=======
-  width: 320px;
->>>>>>> 8d4848dbd8b20d4c0606a950053b6fce6aa461e7
   height: 243px;
 }
 
@@ -872,7 +838,7 @@ footer ul {
   margin-bottom: 31px;
   list-style: none;
   width: 100%;
-  height: 28px;
+  height: 40px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -884,16 +850,19 @@ footer ul {
       justify-content: space-around;
 }
 
-footer ul a {
+footer ul li a {
   color: black;
 }
 
+footer ul li:hover {
+  -webkit-transform: scale(2.6, 2.6);
+          transform: scale(2.6, 2.6);
+  color: aliceblue;
+  border-radius: 5px;
+}
+
 @media screen and (min-width: 321px) {
-<<<<<<< HEAD
   section.title h1 span.punto_color {
-=======
-  section.title .punto_color {
->>>>>>> 8d4848dbd8b20d4c0606a950053b6fce6aa461e7
     color: #0000EC;
   }
   section.title p span::after {
@@ -902,7 +871,6 @@ footer ul a {
   section.title p span::before {
     display: none;
   }
-<<<<<<< HEAD
   section.title h1 span:first-child {
     padding: unset;
   }
@@ -918,13 +886,6 @@ footer ul a {
   }
   section.entrevistas article div img {
     max-width: 350px;
-=======
-  section.title h1 span {
-    padding: unset;
-  }
-  section.entrevistas article div img {
-    width: 80%;
->>>>>>> 8d4848dbd8b20d4c0606a950053b6fce6aa461e7
     padding-bottom: 10px;
   }
 }
@@ -937,12 +898,9 @@ footer ul a {
     margin-left: 50px;
     max-width: 640px;
   }
-<<<<<<< HEAD
   main .nosotros article div.phone_over {
     width: 65%;
   }
-=======
->>>>>>> 8d4848dbd8b20d4c0606a950053b6fce6aa461e7
   main .entrevistas article {
     display: -ms-grid;
     display: grid;
@@ -961,7 +919,6 @@ footer ul a {
   main section.entrevistas article div {
     width: 100%;
   }
-<<<<<<< HEAD
   main .entrevistas article div img.width_responsive {
     max-width: 350px;
   }
@@ -970,14 +927,6 @@ footer ul a {
   }
   main .entrevistas article div:nth-child(2n) {
     padding: 0 0 10px 10%;
-=======
-  main section.entrevistas article div img {
-    width: 90%;
-    padding-bottom: 10px;
-  }
-  main section.topicos article.novedades div.oblicuo div a {
-    margin: 64px 16px 64px 16px;
->>>>>>> 8d4848dbd8b20d4c0606a950053b6fce6aa461e7
   }
 }
 
@@ -1054,7 +1003,18 @@ footer ul a {
     /* *********************************************        Seccion Episodios   ****************************************************** */
     /* *********************************************        Seccion nosotros   ****************************************************** */
     /* *********************************************        Seccion entrevistas     ******************************************** */
-    /* *********************************************        Seccion topicos   ****************************************************** */
+    /*
+            section.entrevistas article div img.width_responsive{
+                padding-bottom: unset;
+                max-width: unset;
+                grid-area: div;
+                width: 100%;
+                min-height:364px;
+                
+            }
+            
+
+            /* *********************************************        Seccion topicos   ****************************************************** */
     /* *********************************************     Seccion topicos ==> Novedades   ******************************************* */
   }
   main section.title h1 {
@@ -1083,25 +1043,19 @@ footer ul a {
     display: -ms-grid;
     display: grid;
         grid-template-areas: "Pod_title Pod_title" "Pod1 Pod2"  "Pod3 Pod4";
-<<<<<<< HEAD
     -ms-grid-columns: 50% 50%;
         grid-template-columns: 50% 50%;
     -ms-grid-rows: auto;
         grid-template-rows: auto;
-=======
->>>>>>> 8d4848dbd8b20d4c0606a950053b6fce6aa461e7
   }
   main .episodios article .pc {
     display: unset;
     max-width: 584px;
     min-height: 232px;
   }
-<<<<<<< HEAD
   main .episodios article .pc iframe {
     width: 80%;
   }
-=======
->>>>>>> 8d4848dbd8b20d4c0606a950053b6fce6aa461e7
   main section.episodios.oblicuo article h2.Pod_title {
     margin: 186px 0 26px 200px;
     font-size: 48px;
@@ -1122,52 +1076,32 @@ footer ul a {
     -ms-grid-row: 2;
     -ms-grid-column: 1;
     grid-area: Pod1;
-<<<<<<< HEAD
     margin: 26px 0 72px 100px;
-=======
-    margin: 26px 72px 72px 100px;
->>>>>>> 8d4848dbd8b20d4c0606a950053b6fce6aa461e7
   }
   main .pc.Pod2 {
     -ms-grid-row: 2;
     -ms-grid-column: 2;
     grid-area: Pod2;
-<<<<<<< HEAD
     margin: 26px 0 72px 72px;
-=======
-    margin: 26px 100px 0 0;
->>>>>>> 8d4848dbd8b20d4c0606a950053b6fce6aa461e7
   }
   main .pc.Pod3 {
     -ms-grid-row: 3;
     -ms-grid-column: 1;
     grid-area: Pod3;
-<<<<<<< HEAD
     margin: 0 72px 164px 100px;
-=======
-    margin: 0 72px 84px 100px;
->>>>>>> 8d4848dbd8b20d4c0606a950053b6fce6aa461e7
   }
   main .pc.Pod4 {
     -ms-grid-row: 3;
     -ms-grid-column: 2;
     grid-area: Pod4;
-<<<<<<< HEAD
     margin: 0 0 164px 72px;
-=======
-    margin: 0 100px 84px 0;
->>>>>>> 8d4848dbd8b20d4c0606a950053b6fce6aa461e7
   }
   main .nosotros {
     top: -68.5px;
   }
   main .nosotros article div.phone_over {
     overflow: unset;
-<<<<<<< HEAD
     width: 50%;
-=======
-    width: 100%;
->>>>>>> 8d4848dbd8b20d4c0606a950053b6fce6aa461e7
   }
   main .nosotros article {
     display: -webkit-box;
@@ -1178,22 +1112,14 @@ footer ul a {
         -ms-flex-flow: row nowrap;
             flex-flow: row nowrap;
   }
-<<<<<<< HEAD
   main .nosotros article div.phone_over img {
     position: unset;
-=======
-  main .nosotros article .phone_over img {
->>>>>>> 8d4848dbd8b20d4c0606a950053b6fce6aa461e7
     min-width: 457.6px;
     height: 660px;
-    margin: 0 62.4px 64px 200px;
+    margin: 0 62.4px 64px 13.9%;
   }
   main .nosotros article div {
-<<<<<<< HEAD
     width: 50%;
-=======
-    width: 100%;
->>>>>>> 8d4848dbd8b20d4c0606a950053b6fce6aa461e7
     height: 100%;
   }
   main .nosotros article div h2 {
@@ -1239,20 +1165,13 @@ footer ul a {
     -ms-grid-rows: 162px 364px 364px;
         grid-template-rows: 162px 364px 364px;
   }
-<<<<<<< HEAD
   main .entrevistas article div:nth-child(1n) {
     width: 100%;
     padding: unset;
   }
-  main section.entrevistas article div img.width_responsive {
+  main section.entrevistas article div img {
     padding-bottom: unset;
     max-width: unset;
-=======
-  main .entrevistas article div {
-    width: 100%;
-  }
-  main .entrevistas article div img {
->>>>>>> 8d4848dbd8b20d4c0606a950053b6fce6aa461e7
     -ms-grid-row: 2;
     -ms-grid-row-span: 2;
     -ms-grid-column: 1;
@@ -1266,51 +1185,31 @@ footer ul a {
     display: -ms-grid;
     display: grid;
         grid-template-areas: "img1 img2 img3 img4" "P_1 P_2 P_3 P_4";
-<<<<<<< HEAD
     -ms-grid-columns: (18.3%)[4];
         grid-template-columns: repeat(4, 18.3%);
     -ms-grid-rows: (50%)[2];
         grid-template-rows: repeat(2, 50%);
-=======
->>>>>>> 8d4848dbd8b20d4c0606a950053b6fce6aa461e7
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-flow: column nowrap;
             flex-flow: column nowrap;
   }
   main .topicos article div img {
-<<<<<<< HEAD
     margin: 2.3% 25.4%;
   }
   main .topicos article div p {
-=======
-    margin: 0 156px 29px 0;
-  }
-  main .topicos article div p {
-    margin: 0 40px 66px 0;
-    width: 220px;
->>>>>>> 8d4848dbd8b20d4c0606a950053b6fce6aa461e7
     height: 32px;
   }
   main .topicos article div .img1 {
     -ms-grid-row: 1;
     -ms-grid-column: 1;
     grid-area: img1;
-<<<<<<< HEAD
-=======
-    margin-left: 278px;
->>>>>>> 8d4848dbd8b20d4c0606a950053b6fce6aa461e7
   }
   main .topicos article div .P_1 {
     -ms-grid-row: 2;
     -ms-grid-column: 1;
     grid-area: P_1;
-<<<<<<< HEAD
     margin-left: 1.38%;
-=======
-    height: 64px;
-    margin-left: 220px;
->>>>>>> 8d4848dbd8b20d4c0606a950053b6fce6aa461e7
   }
   main .topicos article div .img2 {
     -ms-grid-row: 1;
@@ -1337,33 +1236,20 @@ footer ul a {
     -ms-grid-row: 1;
     -ms-grid-column: 4;
     grid-area: img4;
-<<<<<<< HEAD
     margin-right: 19.3%;
-=======
-    margin-right: 278px;
->>>>>>> 8d4848dbd8b20d4c0606a950053b6fce6aa461e7
   }
   main .topicos article div .P_4 {
     -ms-grid-row: 2;
     -ms-grid-column: 4;
     grid-area: P_4;
     height: 64px;
-<<<<<<< HEAD
     margin-right: 1.38%;
-=======
-    margin-right: 220px;
->>>>>>> 8d4848dbd8b20d4c0606a950053b6fce6aa461e7
     margin-bottom: 34px;
   }
   main .topicos article h2 {
     width: 100%;
-<<<<<<< HEAD
     height: 14.5%;
     margin-left: 13.9%;
-=======
-    height: 62px;
-    margin: 64px 0 69px 200px;
->>>>>>> 8d4848dbd8b20d4c0606a950053b6fce6aa461e7
     font-size: 48px;
     color: #060A24;
     letter-spacing: 0;
@@ -1372,20 +1258,14 @@ footer ul a {
     min-height: 518px;
   }
   main section article.novedades div.oblicuo h2 {
-<<<<<<< HEAD
     -webkit-transform-origin: 118% 100%;
             transform-origin: 118% 100%;
-=======
-    -webkit-transform-origin: top right;
-            transform-origin: top right;
->>>>>>> 8d4848dbd8b20d4c0606a950053b6fce6aa461e7
     font-size: 48px;
     color: #FFFFFF;
     letter-spacing: 0;
     text-align: center;
     width: 702px;
     height: 62px;
-<<<<<<< HEAD
     margin: 200px 0 2% 16%;
   }
   main section article.novedades div.oblicuo div {
@@ -1396,28 +1276,17 @@ footer ul a {
     margin: 0 0 0 36%;
     width: 30%;
     height: 56px;
-=======
-    margin: 213px 374px 36px 374px;
-  }
-  main section article.novedades div.oblicuo div {
-    width: 345px;
-    height: 56px;
-    margin: 0 548px 151px 547px;
->>>>>>> 8d4848dbd8b20d4c0606a950053b6fce6aa461e7
     font-size: 18px;
     color: #060A24;
     letter-spacing: 0;
     text-align: center;
     line-height: 24px;
   }
-<<<<<<< HEAD
   main section article.novedades div.oblicuo div.btn a {
     -webkit-transform: skewY(0);
             transform: skewY(0);
     margin: unset;
   }
-=======
->>>>>>> 8d4848dbd8b20d4c0606a950053b6fce6aa461e7
   footer section {
     width: 100%;
     display: -webkit-box;
