Se organizan todos los estilos en todas las vistas , se da por termida la pagina

--- a/style/_mediasQ.scss
+++ b/style/_mediasQ.scss
@@ -465,7 +465,7 @@
         body{
             max-width: 1440px;
             padding-left: calc((100% - 1440px)/2);
-            
+            box-shadow: 0 10px 30px 14px #999;
             
         }
         main .episodios.oblicuo, .topicos {
